# twinr

./: .gitignore  AGENTS.md  FEATURES.md  LICENSE  README.md  __main__.py  config.py  printer.py  pyproject.toml  realtime_runner.py  runner.py  service.py  setup_display.sh  test_display_service.py  test_printer.py  waveshare_v2.py
.tmp_remote_chonky/: external.py  test_external_facade_routes.py
3dprint/: main_panel.scad  main_panel.stl  respeaker.scad  respeaker.stl  thermal_printer.scad  thermal_printer.stl  top_panel.scad  top_panel.stl  turntable.scad
agentic_tools/: README.md  _governance_locking.py  _store_layout.py  chat  codexctx.py  findings_cli  fixreport_cli  healthstream_cli  hint_engine.py  hypothesis  process_hints.py  report  scripthistory  scriptinfo  tasks  tools
agentic_tools/findings/: README.md  __init__.py  cli.py  store.py
agentic_tools/fixreport/: README.md  __init__.py  cli.py  failure_modes.py  failure_modes_catalog.yaml  meta_fixreport_schema.yaml  store.py  types.py  vocab.py  vocab.yaml
agentic_tools/healthstream/: README.md  __init__.py  cli.py  config.py  schema.py  store.py  telemetry.py  types.py  validation.py
agentic_tools/hints/: policies.yaml
agentic_tools/report_tool/: README.md  cli.py  store.py  types.py
common/: __init__.py
common/links/: tessairact_meta.py
docs/: AI_CAMERA_FINE_HAND_GESTURE_PATH.md  AI_CAMERA_INTEGRATION_CONTRACT.md  BROWSERGYM_AGENTLAB_WEB_ARENA_VERIFIED_PLAN.md  CHONKYDB_ONE_SHOT_RETRIEVAL.md  LATENCY_PLAN.md  MIGRATION.md  MULTIMODAL_EVENT_FUSION_V1.md  PI_GESTURE_BASELINE.md  PRIVACY_AUTH_POLICY_V1.md  README.md  RESPEAKER_REQUIREMENTS.md  SENSOR_FUSION.md  SENSOR_MEMORY_V1.md  SMART_HOME_ENVIRONMENT_PROFILE_V1.md  SMART_HOME_RUNTIME_CONTEXT_MODEL_V1.md  WIRING_DIAGRAM.md  chonkydb.md  integrations.md  longterm_memory.md  persistent_personality_architecture.md  specs.yml
docs/providers/: openai.md
hardware/: AGENTS.md  README.md  component.yaml
hardware/bitcraze/: CRAZYFLIE_RECOVERY_RUNBOOK.md  FIRMWARE_RELEASE_LANES.md  README.md  build_on_device_failsafe.sh  build_patched_crazyflie_firmware.sh  capture_runtime_telemetry.py  firmware_release_policy.py  flash_on_device_failsafe.py  hover_physical_disturbance_scenarios.py  hover_primitive.py  hover_sim_scenarios.py  launch_crazysim_mujoco.py  local_navigation.py  on_device_failsafe.py  prepare_olimex_jtag.sh  probe_crazyradio.py  probe_deck_bus.py  probe_multiranger.py  promote_on_device_failsafe_release.py  replay_hover_trace.py  run_hover_acceptance_gate.py  run_hover_sim.py  run_hover_sim_disturbances.py  run_hover_sim_scenarios.py  run_hover_test.py  run_local_inspect_mission.py  setup_bitcraze.sh
hardware/buttons/: README.md  probe_buttons.py  setup_buttons.sh
hardware/display/: README.md  display_test.py  probe_busy_path.py  run_display_loop.py  run_visual_qc.py  setup_display.sh  vendor_patch.py
hardware/mic/: README.md  setup_audio.sh  setup_respeaker_access.sh  setup_respeaker_stability.sh
hardware/ops/: README.md  _repo_python.py  audit_pi_release.py  bootstrap_self_coding_pi.py  check_pi_openai_env_contract.py  deploy_pi_runtime.py  (+21 more)
personality/: CONVERSATION_CLOSURE.md  PERSONALITY.md  SYSTEM.md  TURN_CONTROLLER.md  USER.md
scripts/: generate_multivoice_dataset.py  generate_qwen3tts_wakeword_corpus.py  git_guard.py
test/: __init__.py  _display_hdmi_test_support.py  longterm_test_program.py  merge_pi_tool_matrix_results.py  pi_tool_matrix_catalog.py  pi_tool_matrix_support.py  run_browser_fixture_benchmark.py  run_browser_modern_public_benchmark.py  run_browser_real_target_matrix.py  run_browser_simple_live_acceptance.py  run_display_reserve_copy_eval.py  run_follow_up_steering_live_acceptance.py  run_nightly_live_acceptance.py  run_personality_formation_eval.py  run_pi_realtime_tool_matrix.py  run_pi_tool_matrix.py  run_user_discovery_intent_live_acceptance.py  run_user_discovery_live_acceptance.py  run_webarena_verified_benchmark.py  run_webarena_verified_smoke.py  run_world_intelligence_co_attention_soak.py  self_coding_test_utils.py  test_adaptive_timing.py  test_agent_personality.py  test_ai_camera.py  test_ai_camera_adapter_refactor_parity.py  test_aideck_camera_provider.py  test_aideck_wifi.py  test_attention_servo_state_script.py  test_attention_targeting.py  test_audio.py  test_audio_perception.py  test_audio_policy.py  test_automations.py  test_bitcraze_deck_bus_probe.py  test_bitcraze_firmware_release_policy.py  test_bitcraze_flash_on_device_failsafe.py  test_bitcraze_hover_primitive.py  test_bitcraze_hover_test.py  test_bitcraze_local_inspect_mission.py  (+331 more)
(+1272 files in other folders)
