[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twinr"
version = "0.1.0"
description = "Minimal digital, maximal haptic physical AI agent"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "numpy>=1.26,<2",
    "openwakeword>=0.6,<0.7",
    "openai>=2.26.0,<3",
    "pillow>=10,<12",
    "uvicorn>=0.32,<1",
    "websockets>=13,<16",
]

[project.scripts]
twinr = "twinr.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twinr = [
    "web/static/*.css",
    "web/templates/*.html",
]
