[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twinr"
version = "0.1.0"
description = "Minimal digital, maximal haptic physical AI agent"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.3,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "munkres>=1.1,<2; platform_machine == 'aarch64'",
    "numpy>=1.26,<2",
    "onnxruntime>=1.22,<1.23; platform_machine == 'aarch64'",
    "opencv-contrib-python>=4.10,<5; platform_machine == 'aarch64'",
    "openwakeword>=0.6,<0.7",
    "openai>=2.26.0,<3",
    "pillow>=10,<12",
    "pypinyin>=0.53,<1",
    "PyQt5>=5.15,<6",
    "Send2Trash>=1.8.3,<2",
    "sentencepiece>=0.2,<1",
    "sherpa-onnx>=1.12,<2",
    "sherpa-onnx-bin>=1.12,<2",
    "uvicorn>=0.32,<1",
    "websockets>=13,<16",
]

[project.scripts]
twinr = "twinr.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
twinr = [
    "channels/whatsapp/worker/*.json",
    "channels/whatsapp/worker/*.mjs",
    "web/static/*.css",
    "web/templates/*.html",
]
